--- a/index.html
+++ b/index.html
@@ -84,12 +84,9 @@
         <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
           <h3>Full stack - Web Developer</h3>
           <p>
-            I am an experienced software developer with a diverse background in crafting projects, from simple landing
-            pages to complex enterprise websites. Specializing in Laravel development with technologies like Livewire
-            and Alpine.js, I also have expertise in building WordPress websites. Proficient in HTML5, CSS3, and
-            JavaScript, I focus on creating responsive layouts. My commitment is to ensure security, scalability, and
-            efficient algorithms. I am fluent in both English and French, prioritizing clear communication. Dedicated to
-            providing timely updates and addressing your needs.
+            Hi, my name is Moad Hrimech and I am a 21-year-old systems and software engineering student 
+            at the National School of Applied Science in Agadir. I am a React JS developer and I am passionate 
+            about creating exceptional user experiences through innovative web development.
           </p>
           <div class="row">
             <div class="col-lg-6">
@@ -116,7 +113,7 @@
                 </li>
                 <li>
                   <i class="bi bi-chevron-right"></i> <strong>Email:</strong>
-                  <span>abdelbassitdarir@gmail.com</span>
+                  <span>moadhrimech99@gmail.com</span>
                 </li>
                 <li>
                   <i class="bi bi-chevron-right"></i>
@@ -188,34 +185,35 @@
             <h5>Web technologies</h5>
           </div>
           <div class="progress">
-            <span class="skill">HTML5&CSS3 <i class="val">80%</i></span>
+            <span class="skill">HTML5&CSS3 <i class="val">90%</i></span>
             <div class="progress-bar-wrap">
-              <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="80">
+              <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="80">
               </div>
             </div>
           </div>
 
           <div class="progress">
-            <span class="skill">CSS3 <i class="val">78%</i></span>
+            <span class="skill">CSS3 <i class="val">90%</i></span>
             <div class="progress-bar-wrap">
-              <div class="progress-bar" role="progressbar" aria-valuenow="78" aria-valuemin="0" aria-valuemax="78">
+              <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="78">
+              </div>
+            </div>
+          </div> 
+          <div class="progress">
+            <span class="skill">React js, Next js <i class="val">90%</i></span>
+            <div class="progress-bar-wrap">
+              <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="75">
               </div>
             </div>
           </div>
           <div class="progress">
-            <span class="skill">Node.js <i class="val">70%</i></span>
+            <span class="skill">Node.js <i class="val">60%</i></span>
             <div class="progress-bar-wrap">
-              <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="70">
+              <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="70">
               </div>
             </div>
           </div>
-          <div class="progress">
-            <span class="skill">React <i class="val">75%</i></span>
-            <div class="progress-bar-wrap">
-              <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="75">
-              </div>
-            </div>
-          </div>
+         
           <div class="progress">
             <span class="skill">Bootstrap <i class="val">90%</i></span>
             <div class="progress-bar-wrap">
@@ -245,37 +243,37 @@
             <h5>Programming Languages</h5>
           </div>
           <div class="progress">
-            <span class="skill">C <i class="val">70%</i></span>
+            <span class="skill">C <i class="val">80%</i></span>
             <div class="progress-bar-wrap">
               <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">
               </div>
             </div>
           </div>
           <div class="progress">
-            <span class="skill">C++ <i class="val">75%</i></span>
+            <span class="skill">C++ <i class="val">80%</i></span>
             <div class="progress-bar-wrap">
-              <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">
+              <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">
               </div>
             </div>
           </div>
           <div class="progress">
-            <span class="skill">PHP <i class="val">90%</i></span>
+            <span class="skill">PHP <i class="val">60%</i></span>
+            <div class="progress-bar-wrap">
+              <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100">
+              </div>
+            </div>
+          </div>
+          <div class="progress">
+            <span class="skill">JavaScript (ES6) , TypeScript <i class="val">90%</i></span>
             <div class="progress-bar-wrap">
               <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">
               </div>
             </div>
           </div>
           <div class="progress">
-            <span class="skill">JavaScript (ES6) <i class="val">79%</i></span>
+            <span class="skill">Java <i class="val">70%</i></span>
             <div class="progress-bar-wrap">
-              <div class="progress-bar" role="progressbar" aria-valuenow="79" aria-valuemin="0" aria-valuemax="100">
-              </div>
-            </div>
-          </div>
-          <div class="progress">
-            <span class="skill">Java <i class="val">75%</i></span>
-            <div class="progress-bar-wrap">
-              <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">
+              <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100">
               </div>
             </div>
           </div>
