--- a/index.html
+++ b/index.html
@@ -436,9 +436,9 @@
             <h5>CMS</h5>
           </div>
           <div class="progress">
-            <span class="skill">WordPress<i class="val">96%</i></span>
+            <span class="skill">WordPress<i class="val">50%</i></span>
             <div class="progress-bar-wrap">
-              <div class="progress-bar" role="progressbar" aria-valuenow="89" aria-valuemin="0" aria-valuemax="100">
+              <div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
               </div>
             </div>
           </div>
@@ -537,62 +537,79 @@
         <div class="col-lg-6">
           <h3 class="resume-title">Professional Experience</h3>
           <div class="resume-item">
-            <h4>Full Stack Laravel Developer - Lecourt Consulting</h4>
+            <h4>FrontEnd React Js - Lecourt Consulting</h4>
             <h5>June 2023 - Present</h5>
             <p><em>Location:</em> Technopark Souss Massa, Agadir</p>
-            <p><em>Job Position:</em> Full-Time</p>
+            <p><em>Job Position:</em> Part-Time</p>
             <p><em>Responsibilities:</em></p>
             <ul>
               <li>Contributing to innovative projects</li>
-              <li>Implementing web scraping initiatives</li>
+              <li>Builing Friendly User Interfaces</li>
             </ul>
             <div class="used-technologies">
+              <span>React Js</span>
+              <span>JavaScript</span>
               <span>Laravel</span>
               <span>Livewire</span>
               <span>Alpine.js</span>
               <span>HTML5</span>
               <span>CSS3</span>
               <span>Bootstrap</span>
-              <span>JavaScript</span>
-              <span>Python</span>
+              <span>TailwindCss</span>
               <span>MySQL</span>
             </div>
           </div>
           <div class="resume-item">
-            <h4>WordPress Developer</h4>
+            <h4>React Js Developer</h4>
             <h5>April 2022 - Present</h5>
             <p><em>Freelance</em></p>
             <p><em>Responsibilities:</em></p>
             <ul>
               <li>
-                Created custom WordPress themes for unique website designs.
+                Creating responsive websites with a focus on scability and fast load
               </li>
-              <li>Developed plugins to add special features to websites.</li>
+              <li>Customizing websites designs.</li>
             </ul>
             <p><em>Technologies Used:</em></p>
             <div class="used-technologies">
-              <span>Elementor</span>
-              <span>WooCommerce</span>
-              <span>WpForms</span>
-              <span>Optimization</span>
+              <span>React Js</span>
+              <span>Next Js</span>
+              <span>Laravel</span>
               <span>Security</span>
               <span>more...</span>
             </div>
           </div>
 
           <div class="resume-item">
-            <h4>Full Stack Laravel Developer - Lecourt Consulting</h4>
+            <h4>React Js Developer - SITI</h4>
             <h5>April 2023 - June 2023</h5>
-            <p><em>Location:</em> Technopark Souss Massa, Agadir</p>
+            <p><em>Location:</em> Quartier Industriel Sidi Ghanem , Agadir</p>
             <p><em>Job Position:</em>Internship</p>
             <p><em>Responsibilities:</em></p>
             <ul>
-              <li>Contributing to innovative projects</li>
+              <li>Developing a Real Time Monitoring System</li>
             </ul>
             <div class="used-technologies">
-              <span>Laravel</span>
-              <span>Livewire</span>
-              <span>Alpine.js</span>
+              <span>React Js</span>
+              <span>TailwindCss</span>
+              <span>Node Js</span>
+            </div>
+          </div>
+          <div class="resume-item">
+            <h4>
+              Full Stack PHP Developer - M’BROUKA cooperative,
+              Agadir
+            </h4>
+            <h5>April 2022 - May 2022</h5>
+            <p><em>Location:</em>Agadir</p>
+            <p><em>Job Position:</em>Internship</p>
+            <p><em>Responsibilities:</em></p>
+            <ul>
+              <li>Developed a Landing Page for the Cooperative</li>
+              <li>Developed an Employee Manegement System</li>
+            </ul>
+            <div class="used-technologies">
+              <span>PHP</span>
               <span>HTML5</span>
               <span>CSS3</span>
               <span>Bootstrap</span>
@@ -602,22 +619,15 @@
           </div>
           <div class="resume-item">
             <h4>
-              Full Stack PHP Developer - School of Education and Training,
-              Agadir
+              Full Stack PHP Developer - GREEN CROP,
+              Ouled Teima
             </h4>
-            <h5>April 2022 - May 2022</h5>
+            <h5>July 2021 - May 2022</h5>
             <p><em>Location:</em>Agadir</p>
             <p><em>Job Position:</em>Internship</p>
             <p><em>Responsibilities:</em></p>
             <ul>
-              <li>Developed a dynamic website for absence management</li>
-              <li>
-                Allows professors to view modules, classes, and student lists
-              </li>
-              <li>
-                Facilitates authentication to add and remove absences for
-                students
-              </li>
+              <li>Developed a Stock Management System</li>
             </ul>
             <div class="used-technologies">
               <span>PHP</span>
@@ -631,6 +641,22 @@
         </div>
         <div class="col-lg-6">
           <h3 class="resume-title">Education</h3>
+          <div class="resume-item">
+            <h4>
+              Master's Degree in Embedded Systems
+            </h4>
+            <h5>2023 - Present</h5>
+            <p><em>Applied Science High School - Agadir</em></p>
+            <p>Studied a comprehensive curriculum with a focus on:</p>
+            <ul>
+              <li>C , C++</li>
+              <li>Python</li>
+              <li>VHDL , NIOS</li>
+              <li>IOT</li>
+              <li>ARM</li>
+              <li>Raspberrypi , Arduino , PIC , STM32 , FPGA</li>
+            </ul>
+          </div>
           <div class="resume-item">
             <h4>
               Bachelor's Degree in Computer Systems and Software Engineering
