--- a/index.html
+++ b/index.html
@@ -739,7 +739,8 @@
             <li data-filter="*" class="filter-active">All</li>
             <li data-filter=".filter-php">PHP</li>
             <li data-filter=".filter-laravel">LARAVEL</li>
-            <li data-filter=".filter-wordpress">WordPress</li>
+            <!-- <li data-filter=".filter-wordpress">WordPress</li> -->
+            <li data-filter=".filter-react">React Js</li>
           </ul>
         </div>
       </div>
