fix header link

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
   <!-- ======= Header ======= -->
   <header id="header">
     <div class="container">
-      <h1><a href="https://darirabdelbas.site/">Hrimech Moad</a></h1>
+      <h1><a href="https://moadhrimech.netlify.app/">Hrimech Moad</a></h1>
       <!-- Uncomment below if you prefer to use an image logo -->
       <h2 style="color: #fff">
         I'm <span class="typing" style="color: #12d640"></span>
