add google anylitics link

--- a/index.html
+++ b/index.html
@@ -8,9 +8,19 @@
   <title>Hrimech Moad</title>
   <meta content="" name="description" />
   <meta name="keywords"
-    content="Abdelbassit Darir, Full Stack Web Developer, Laravel, Livewire, Alpine.js, WordPress, Web Development, Security, Scalability">
+    content="Moad Hrimech, Full Stack Web Developer, Laravel, Livewire, React.js, Node.js, Web Development, Security, Scalability">
   <meta name="description"
-    content="Abdelbassit Darir - Full Stack Web Developer. Experienced software developer specializing in Laravel, Livewire, and Alpine.js. Expertise in crafting responsive websites with a focus on security and scalability. Fluent in English and French for clear communication. Dedicated to providing timely updates and addressing your needs.">
+    content="Moad Hrimech - Full Stack Web Developer. Experienced software developer specializing in React js and Laravel, Livewire, and Node.js. Expertise in crafting responsive websites with a focus on security and scalability. Fluent in English and French for clear communication. Dedicated to providing timely updates and addressing your needs.">
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-MBV0849548"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-MBV0849548');
+</script>
 
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon" />
@@ -31,6 +41,8 @@
 
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet" />
+
+
 </head>
 
 <body>
