--- a/index.html
+++ b/index.html
@@ -483,7 +483,7 @@
         <!-- Start IProject Management-->
         <div class="col-lg-6">
           <div class="sub-section-title section-title">
-            <h5>IProject Management</h5>
+            <h5>Project Management</h5>
           </div>
           <div class="progress">
             <span class="skill">Asana<i class="val">70%</i></span>
