--- a/index.html
+++ b/index.html
@@ -96,9 +96,9 @@
         <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
           <h3>Full stack - Web Developer</h3>
           <p>
-            Hi, my name is Moad Hrimech and I am a 22-year-old systems and software engineering student 
-            at the National School of Applied Science in Agadir. I am a Full Stack developer and I am passionate 
-            about creating exceptional user experiences through innovative web development.
+            Hi, my name is Moad Hrimech. I’m a 22-year-old systems and software engineering graduate from the National School of Applied Science in Agadir. I’m a Full Stack developer with a strong passion for building exceptional user experiences through innovative and efficient web development.
+
+
           </p>
           <div class="row">
             <div class="col-lg-6">
@@ -109,7 +109,7 @@
                 </li>
                 <li>
                   <i class="bi bi-chevron-right"></i> <strong>Phone:</strong>
-                  <span>+212 762376222</span>
+                  <span>+212 7 62 37 62 22</span>
                 </li>
                 <li>
                   <i class="bi bi-chevron-right"></i> <strong>City:</strong>
@@ -219,10 +219,16 @@
             </div>
           </div>
           <div class="progress">
-            <span class="skill">Node.js <i class="val">60%</i></span>
+            <span class="skill">Node.js, Express.js <i class="val">75%</i></span>
             <div class="progress-bar-wrap">
-              <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="70">
-              </div>
+              <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+            </div>
+          </div>
+        
+          <div class="progress">
+            <span class="skill">Laravel , LiveWire <i class="val">80%</i></span>
+            <div class="progress-bar-wrap">
+              <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
           </div>
          
@@ -383,7 +389,7 @@
             </div>
           </div>
           <div class="progress">
-            <span class="skill">Bitbucket<i class="val">65%</i></span>
+            <span class="skill">Docker<i class="val">65%</i></span>
             <div class="progress-bar-wrap">
               <div class="progress-bar" role="progressbar" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100">
               </div>
@@ -541,13 +547,13 @@
         <div class="col-lg-3 col-md-4 mt-4 mt-md-0">
           <div class="icon-box">
             <i class="ri-pencil-ruler-2-line" style="color: #5578ff"></i>
-            <h3>Embedded Systems</h3>
+            <h3>Web Design</h3>
           </div>
         </div>
         <div class="col-lg-3 col-md-4 mt-4 mt-md-0">
           <div class="icon-box">
             <i class="ri-code-s-slash-fill" style="color: #e80368"></i>
-            <h3>Software Engineering</h3>
+            <h3>Embedded Systems</h3>
           </div>
         </div>
         <div class="col-lg-3 col-md-4 mt-4 mt-lg-0">
@@ -615,14 +621,36 @@
         <div class="col-lg-6">
           <h3 class="resume-title">Professional Experience</h3>
           <div class="resume-item">
-            <h4>FrontEnd React Js - Lecourt Consulting</h4>
-            <h5>June 2023 - Present</h5>
+            <h4>Full Stack/IoT Developer - SITI Tea</h4>
+            <h5>February 2025 - June 2025 (5 months)</h5>
+            <p><em>Location:</em> Sidi Ghanem, Marrakesh</p>
+            <p><em>Job Position:</em> Intern</p>
+            <p><em>Responsibilities:</em></p>
+            <ul>
+              <li>Builing the IoT architecture (sensors , microcontrollers , communication protocols)</li>
+              <li>Optimizing the Dashboard Web Application</li>
+            </ul>
+            <div class="used-technologies">
+              <span>React Js</span>
+              <span>JavaScript</span>
+              <span>Node js</span>
+              <span>HTML5</span>
+              <span>CSS3</span>
+              <span>Socket.io</span>
+              <span>Tanstack Query</span>
+              <span>TailwindCss</span>
+              <span>MongoDb</span>
+            </div>
+          </div>
+          <div class="resume-item">
+            <h4>Full Stack Developer - Lecourt Consulting</h4>
+            <h5>June 2023 - June 2024 (1 year)</h5>
             <p><em>Location:</em> Technopark Souss Massa, Agadir</p>
             <p><em>Job Position:</em> Part-Time</p>
             <p><em>Responsibilities:</em></p>
             <ul>
               <li>Contributing to innovative projects</li>
-              <li>Builing Friendly User Interfaces</li>
+              <li>Builing Performant Web Applications</li>
             </ul>
             <div class="used-technologies">
               <span>React Js</span>
@@ -724,7 +752,7 @@
               Master's Degree in Embedded Systems
             </h4>
             <h5>2023 - Present</h5>
-            <p><em>Applied Science High School - Agadir</em></p>
+            <p><em>Applied Science High School (ENSA) - Agadir</em></p>
             <p>Studied a comprehensive curriculum with a focus on:</p>
             <ul>
               <li>C , C++</li>
@@ -822,7 +850,7 @@
             <li data-filter=".filter-php">PHP</li>
             <li data-filter=".filter-laravel">LARAVEL</li>
             <li data-filter=".filter-wordpress">WordPress</li>
-            <li data-filter=".filter-react">React Js</li>
+            <li data-filter=".filter-react">React Js / Node js</li>
           </ul>
         </div>
       </div>
@@ -956,8 +984,8 @@
     document.getElementById('download-portfolio-fr').addEventListener('click', function() {
       const link = document.createElement('a');
       link.target = '_blank';
-      link.href = './assets/documents/resume.pdf'; // Path to your PDF file
-      link.download = './assets/documents/resume.pdf';
+      link.href = './assets/documents/cv.pdf'; // Path to your PDF file
+      link.download = './assets/documents/cv.pdf';
       document.body.appendChild(link);
       link.click();
       document.body.removeChild(link);
@@ -965,8 +993,8 @@
     document.getElementById('download-portfolio-en').addEventListener('click', function() {
       const link = document.createElement('a');
       link.target = '_blank';
-      link.href = './assets/documents/cv.pdf'; // Path to your PDF file
-      link.download = './assets/documents/cv.pdf';
+      link.href = './assets/documents/resume.pdf'; // Path to your PDF file
+      link.download = './assets/documents/resume.pdf';
       document.body.appendChild(link);
       link.click();
       document.body.removeChild(link);
