--- a/index.html
+++ b/index.html
@@ -851,6 +851,8 @@
             <li data-filter=".filter-laravel">LARAVEL</li>
             <li data-filter=".filter-wordpress">WordPress</li>
             <li data-filter=".filter-react">React Js / Node js</li>
+            <li data-filter=".filter-django">Django</li>
+            <li data-filter=".filter-drupal">Drupal</li>
           </ul>
         </div>
       </div>
